<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/Learn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="151dp" />

    <Button
        android:id="@+id/Leaderboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="219dp" />

    <Button
        android:id="@+id/Settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:id="@+id/About_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="360dp" />

</androidx.constraintlayout.widget.ConstraintLayout>