<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/navBarFill"
        android:layout_above="@+id/usernameReg"
        android:background="@color/topbar"
        android:backgroundTint="@color/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/headcat"
        android:text="@string/forgetful_coder"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="35sp"
        android:background="@color/topbar"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="55dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameReg"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/topbar"
        android:src="@drawable/back_btn_png"
        android:contentDescription="@string/back_hover_text" />



    <EditText
        android:id="@+id/usernameReg"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:layout_below="@+id/headcat"
        android:background="@drawable/username_button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="20dp"
        android:paddingVertical="15dp"
        android:inputType="none"
        android:layout_marginHorizontal="70dp"
        />

    <EditText
        android:id="@+id/emailReg"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:layout_below="@+id/usernameReg"
        android:background="@drawable/username_button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="70dp"
        />

    <EditText
        android:id="@+id/passwordReg"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_below="@+id/emailReg"
        android:background="@drawable/username_button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="70dp"
        />

    <EditText
        android:id="@+id/passwordConReg"
        android:hint="@string/passwordcon"
        android:textColorHint="@color/white"
        android:layout_below="@+id/passwordReg"
        android:textColor="@color/white"
        android:background="@drawable/username_button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="70dp"
        />
    <TextView
        android:id="@+id/errornotify"
        android:layout_below="@+id/passwordConReg"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/error"
        android:fontFamily="@font/franklingothicheavy"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_below="@+id/passwordConReg"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/login_register_button_color"
        android:paddingHorizontal="40dp"/>




</RelativeLayout>