<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/background">

    <TextView
        android:id="@+id/navBarFill"
        android:layout_above="@+id/usernameLog"
        android:background="@color/topbar"
        android:backgroundTint="@color/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/headcat"
        android:text="@string/forgetful_coder"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="35dp"
        android:background="@color/topbar"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <EditText
        android:id="@+id/usernameLog"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_below="@+id/headcat"
        android:background="@drawable/username_button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="25dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="70dp"
        />


    <EditText
        android:id="@+id/passwordLog"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_below="@+id/usernameLog"
        android:background="@drawable/username_button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="70dp"
        />


    <Button
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordLog"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:fontFamily="@font/franklingothicheavy"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/login_register_button_color"
        android:paddingHorizontal="60dp"/>

    <Button
        android:id="@+id/toRegister"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="-10dp"
        android:text="@string/toRegister"
        android:textSize="14dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:paddingHorizontal="80dp"/>




</RelativeLayout>